Update UI elements and titles across multiple templates for consistency and improved user experience

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -29,7 +29,7 @@
       </a>
       <div class="title-container">
         <div class="header-title">Feedback and Evaluation System</div>
-        <div class="subtitle">Cavite State University - Bacoor Campus</div>
+        <div class="subtitle">Cavite State University - Bacoor City Campus</div>
       </div>
       <div class="profile-pic">
         {% if student.profile_picture %}
@@ -209,7 +209,7 @@
       <!-- Button with Form Dropdown -->
       <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="bi bi-funnel"></i> Filter Data
+          <i class="bi bi-funnel-fill"></i> Filter Data
         </button>
         <div class="dropdown-menu filter_dropdown" aria-labelledby="filterDropdown">
           <form method="GET" id="filterForm" class="form">
