--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor Campus {% endblock %}</title>
+  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor City Campus {% endblock %}</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
         </a>
         <div class="title-container">
           <div class="header-title">Feedback and Evaluation System </div>
-          <div class="subtitle">Cavite State University - Bacoor Campus</div>
+          <div class="subtitle">Cavite State University - Bacoor City Campus</div>
         </div>
         <div class="profile-pic">
           {% if student.profile_picture %}
@@ -267,7 +267,7 @@
         class="footer__socials__logo"></a>
     </div>
     <div class="footer__copyright">
-      <p class="footer__copyright__text">© Cavite State University Bacoor Campus</p>
+      <p class="footer__copyright__text">© Cavite State University Bacoor City Campus</p>
     </div>
   </footer>
   
