--- a/Feedbacksystem/templates/pages/hr_dashboard.html
+++ b/Feedbacksystem/templates/pages/hr_dashboard.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor Campus {% endblock %}</title>
+  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor City Campus {% endblock %}</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
         </a>
         <div class="title-container">
           <div class="header-title">Feedback and Evaluation System </div>
-          <div class="subtitle">Cavite State University - Bacoor Campus</div>
+          <div class="subtitle">Cavite State University - Bacoor City Campus</div>
         </div>
  
 
@@ -200,7 +200,7 @@
     <a href="{% url 'stakeholderevaluations' %}" class="btn custom-btn mb-2">
         <i class="bi bi-list-check"></i> <b>View All Evaluations</b>
       </a>
-    <button type="button" class="btn btn-success mb-2" data-bs-toggle="modal" data-bs-target="#summaryReportModal"> <i class="bi bi-file-earmark-text"></i> <b>Generate Summary Report</b> </button>
+    <button type="button" class="btn custom-btn mb-2" data-bs-toggle="modal" data-bs-target="#summaryReportModal"> <i class="bi bi-file-earmark-text"></i> <b>Generate Summary Report</b> </button>
 
     <div class="modal fade" id="summaryReportModal" tabindex="-1" aria-labelledby="summaryReportModalLabel" aria-hidden="true">
         <div class="modal-dialog">
