--- a/Feedbacksystem/templates/pages/sections.html
+++ b/Feedbacksystem/templates/pages/sections.html
@@ -46,7 +46,7 @@
         <input id="fileInput" type="file" name="subjectfacultyfile" accept=".xlsx" style="display: none;" onchange="this.form.submit()">
       
         <!-- Custom button to trigger file selection -->
-        <button type="button" class="btn btn-primary" onclick="document.getElementById('fileInput').click();">
+        <button type="button" class="btn custom-btn" onclick="document.getElementById('fileInput').click();">
             Import Subjects and Faculty
         </button>
       </div>
