--- a/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
@@ -20,7 +20,7 @@
     {% endfor %}
 </div>
 {% endif %}
-<a href="{% url 'view_latest_faculty_evaluations' %}" class="btn btn-primary">
+<a href="{% url 'view_latest_faculty_evaluations' %}" class="btn custom-btn">
   <i class="bi bi-file-earmark-text"></i> <b>View Latest Evaluations</b>
 </a>
 
@@ -28,7 +28,7 @@
   <a href="{% url 'faculty_evaluations_summary_report_pdf' %}" class="btn custom-btn">
       <i class="bi bi-file-earmark-pdf"></i> <b>View Summary Report</b>
   </a>
-  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#sendReportModal">
+  <button type="button" class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#sendReportModal">
       <i class="bi bi-send"></i> <b>Send Summary Report</b>
   </button>
 {% endif %}
