--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -77,7 +77,7 @@
       <input id="fileInput" type="file" name="facultyfile" accept=".xlsx" style="display: none;" onchange="this.form.submit()">
   
       <!-- Custom button to trigger file selection -->
-      <button type="button" class="btn btn-primary" onclick="document.getElementById('fileInput').click();">
+      <button type="button" class="btn custom-btn" onclick="document.getElementById('fileInput').click();">
           Bulk Import
       </button>
     </div>
