--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor Campus {% endblock %}</title>
+  <title>{% block title %}Feedback and Evaluation System - CvSU Bacoor City Campus{% endblock %}</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,8 +16,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="{% static 'css/facultypage.css'%}">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  
-
 </head>
 
 <body>
@@ -69,7 +67,7 @@
         </a>
         <div class="title-container">
           <div class="header-title">Feedback and Evaluation System </div>
-          <div class="subtitle">Cavite State University - Bacoor Campus</div>
+          <div class="subtitle">Cavite State University - Bacoor City Campus</div>
         </div>
  
 
@@ -291,7 +289,7 @@
 <div class="d-flex" style="gap: 1em;">
   <div class="dropdown mb-2">
     <button class="btn btn-primary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-      <i class="bi bi-filter-square-fill"></i> Filter Data
+      <i class="bi bi-funnel-fill"></i> Filter Data
 
     </button>
     <div class="dropdown-menu filter_dropdown" aria-labelledby="filterDropdown">
