--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/login_page.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Feedback and Evaluation System - CvSU Bacoor Campus</title>
+    <title>Feedback and Evaluation System - CvSU Bacoor City Campus</title>
 </head>
 
 <body>
