--- a/Feedbacksystem/templates/pages/subjects.html
+++ b/Feedbacksystem/templates/pages/subjects.html
@@ -51,7 +51,7 @@
     <input id="fileInput" type="file" name="subjectfile" accept=".xlsx" style="display: none;" onchange="this.form.submit()">
 
     <!-- Custom button to trigger file selection -->
-    <button type="button" class="btn btn-primary" onclick="document.getElementById('fileInput').click();">
+    <button type="button" class="btn custom-btn" onclick="document.getElementById('fileInput').click();">
         Bulk Import
     </button>
   </div>
