Add event tags and venue type to event templates and styles for better categorization

--- a/Feedbacksystem/static/css/student_page.css
+++ b/Feedbacksystem/static/css/student_page.css
@@ -410,6 +410,44 @@ footer{
 .active>.page-link, .page-link.active{
   z-index: 1 !important;
 }
+.event-tags {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.event-tag {
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 15px;
+  font-size: 0.8rem;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  color: #ffffff;
+  background-color: #28a745;
+}
+
+.event-type-school-event {
+  background-color: #007bff; 
+}
+
+.event-type-webinar-seminar {
+  background-color: #28a745; 
+}
+
+.event-type-training-workshop {
+  background-color: #ffc107; 
+}
+
+
+.venue-type-in-campus-event {
+  background-color: #17a2b8; 
+}
+
+.venue-type-off-campus-event {
+  background-color: #dc3545; 
+}
+
 @media (max-width:1200px) {
   #sidebar {
     margin-left: -250px; /* Adjust based on sidebar width */
@@ -541,6 +579,9 @@ footer{
 .card-text {
       font-size: 0.9em;
       color: #555;
+  }
+.material-symbols-outlined{
+    margin-top: 1.5em;
   }
 }
 @media (max-width: 400px){
