--- a/Feedbacksystem/templates/pages/faculty_evaluations_department_summary_report.html
+++ b/Feedbacksystem/templates/pages/faculty_evaluations_department_summary_report.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Summary List of SET Ratings</title>
+    <title>Summary List of SET Ratings for {{department_name}} </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,6 +47,7 @@
         <img src="{% static 'images/cvsuheader.png' %}" alt="CvSU Logo">
     </div>
     <h1>Summary List of SET Ratings for AY {{current_academic_year}} - {{current_semester}} </h1>
+    <h1>{{department_name}}</h1>
     <h2>Part I: General Evaluation of the Faculty</h2> 
     <table>
         <thead>
