--- a/Feedbacksystem/templates/pages/faculty_events_upcoming.html
+++ b/Feedbacksystem/templates/pages/faculty_events_upcoming.html
@@ -36,9 +36,12 @@
     <img src="{% static 'images/cvsu_thumbnail.jpg' %}"  class="card-img-top img-fluid" alt="CvSU Thumbnail">
     {% endif %}
       <h5 class="card-title">{{i.title}}</h5>
+      <div class="event-tags">
+        <span class="event-tag event-type-{{ i.event_type|slugify }}">{{ i.event_type }}</span>
+        <span class="event-tag venue-type-{{ i.event_venue_type|slugify }}">{{ i.event_venue_type }}</span>
+     </div>
       <h6 class="card-subtitle mb-2 text-body-secondary">{{i.date}}</h6>
       <p class="card-text">{{i.description|slice:":70"}}...</p>
-      {% if i.evaluation_status %}<a href="{% url 'event_detail' i.pk %}" class="card-link btn custom-btn">Evaluate</a>{% endif %}
       <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal{{ i.id }}">View Details</a>
     </div>
 </div>
@@ -55,7 +58,7 @@
             <p>Time: {{ i.time }}</p>
             <p>Location: {{ i.location }}</p>
             <p>Description: {{ i.description }}</p>
-            <p>Evaluation Status: {{ i.evaluation_identifier }}</p>
+            <p>Evaluation Status: {{ i.evaluation_status }}</p>
             <p>Created by: {{ i.get_author_name }}</p>
         </div>
         <div class="modal-footer">
